--- a/packages/extension/public/style/navigation.css
+++ b/packages/extension/public/style/navigation.css
@@ -9,6 +9,8 @@
   max-height: 57px;
   background-color: #f3f0f9;
   box-shadow: 0 5px 10px -5px rgba(0,0,0,.1);
+  position: sticky;
+  top: 0;
 }
 .navigation_menu-items {
   display: flex;
